# ziplock

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
docs/adr/: 001-sandbox-plus-dns-proxy.md  002-sbpl-profile-tuning.md  003-doh-and-ssh-agent.md
src/: dns.rs  lib.rs  main.rs  proxy.rs  sandbox.rs
tests/: e2e_integration.rs  proxy_integration.rs  sandbox_integration.rs  signal_integration.rs
tests/common/: mod.rs
