[package]
name = "ziplock"
version = "1.3.7"
edition = "2024"
description = "Safe --dangerously-skip-permissions for Claude Code"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-resolver = { version = "0.25", features = ["https-ring", "webpki-roots"] }
fast-socks5 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nix = { version = "0.31", features = ["signal", "process"] }
which = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
